--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes horizontal-shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-10px);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  75% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+body {
+  background-image: url("./assets/layered-waves-haikei-2.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
+
+p,
+li {
+  color: white;
+}
+
 h3 {
   margin-bottom: 0.3rem;
 }
 
 .blurred-hint {
   transition: 300ms;
+}
+
+.wrong-answer {
+  border-color: red;
+}
+
+.right-answer {
+  border-color: aquamarine;
+}
+
+.shake {
+  animation: horizontal-shaking 500ms linear;
 }
